lab1/Code/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty
    4           | error RC

    5 ExtDef: Specifier ExtDecList SEMI
    6       | Specifier SEMI
    7       | Specifier FunDec SEMI
    8       | Specifier FunDec CompSt
    9       | Specifier error RC

   10 ExtDecList: VarDec
   11           | VarDec COMMA ExtDecList

   12 Specifier: TYPE
   13          | StructSpecifier

   14 StructSpecifier: STRUCT OptTag LC DefList RC
   15                | STRUCT Tag
   16                | STRUCT error RC

   17 OptTag: ID
   18       | %empty

   19 Tag: ID

   20 VarDec: ID
   21       | VarDec LB INT RB
   22       | error RB

   23 FunDec: ID LP VarList RP
   24       | ID LP RP
   25       | error RP

   26 VarList: ParamDec COMMA VarList
   27        | ParamDec
   28        | error COMMA

   29 ParamDec: Specifier VarDec

   30 CompSt: LC DefList StmtList RC
   31       | error LC

   32 StmtList: Stmt StmtList
   33         | %empty

   34 Stmt: Exp SEMI
   35     | CompSt
   36     | RETURN Exp SEMI
   37     | IF LP Exp RP Stmt
   38     | IF LP Exp RP Stmt ELSE Stmt
   39     | WHILE LP Exp RP Stmt
   40     | error SEMI
   41     | Exp error SEMI

   42 DefList: Def DefList
   43        | %empty

   44 Def: Specifier DecList SEMI
   45    | Specifier error SEMI

   46 DecList: Dec
   47        | Dec COMMA DecList
   48        | error COMMA

   49 Dec: VarDec
   50    | VarDec ASSIGNOP Exp
   51    | error RP

   52 Exp: Exp ASSIGNOP Exp
   53    | Exp AND Exp
   54    | Exp OR Exp
   55    | Exp RELOP Exp
   56    | Exp PLUS Exp
   57    | Exp MINUS Exp
   58    | Exp STAR Exp
   59    | Exp DIV Exp
   60    | LP Exp RP
   61    | MINUS Exp
   62    | NOT Exp
   63    | ID LP Args RP
   64    | ID LP RP
   65    | Exp LB Exp RB
   66    | Exp DOT ID
   67    | ID
   68    | INT
   69    | FLOAT
   70    | Exp LB error RB
   71    | error RP

   72 Args: Exp COMMA Args
   73     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 4 9 16 22 25 28 31 40 41 45 48 51 70 71
    SEMI <syntax> (258) 5 6 7 34 36 40 41 44 45
    COMMA <syntax> (259) 11 26 28 47 48 72
    ASSIGNOP <syntax> (260) 50 52
    RELOP <syntax> (261) 55
    PLUS <syntax> (262) 56
    MINUS <syntax> (263) 57 61
    STAR <syntax> (264) 58
    DIV <syntax> (265) 59
    AND <syntax> (266) 53
    OR <syntax> (267) 54
    DOT <syntax> (268) 66
    NOT <syntax> (269) 62
    TYPE <syntax> (270) 12
    LP <syntax> (271) 23 24 37 38 39 60 63 64
    RP <syntax> (272) 23 24 25 37 38 39 51 60 63 64 71
    LB <syntax> (273) 21 65 70
    RB <syntax> (274) 21 22 65 70
    LC <syntax> (275) 14 30 31
    RC <syntax> (276) 4 9 14 16 30
    STRUCT <syntax> (277) 14 15 16
    RETURN <syntax> (278) 36
    IF <syntax> (279) 37 38
    ELSE <syntax> (280) 38
    WHILE <syntax> (281) 39
    ID <syntax> (282) 17 19 20 23 24 63 64 66 67
    FLOAT <syntax> (283) 69
    INT <syntax> (284) 21 68
    LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    Program <syntax> (32)
        on left: 1
        on right: 0
    ExtDefList <syntax> (33)
        on left: 2 3 4
        on right: 1 2
    ExtDef <syntax> (34)
        on left: 5 6 7 8 9
        on right: 2
    ExtDecList <syntax> (35)
        on left: 10 11
        on right: 5 11
    Specifier <syntax> (36)
        on left: 12 13
        on right: 5 6 7 8 9 29 44 45
    StructSpecifier <syntax> (37)
        on left: 14 15 16
        on right: 13
    OptTag <syntax> (38)
        on left: 17 18
        on right: 14
    Tag <syntax> (39)
        on left: 19
        on right: 15
    VarDec <syntax> (40)
        on left: 20 21 22
        on right: 10 11 21 29 49 50
    FunDec <syntax> (41)
        on left: 23 24 25
        on right: 7 8
    VarList <syntax> (42)
        on left: 26 27 28
        on right: 23 26
    ParamDec <syntax> (43)
        on left: 29
        on right: 26 27
    CompSt <syntax> (44)
        on left: 30 31
        on right: 8 35
    StmtList <syntax> (45)
        on left: 32 33
        on right: 30 32
    Stmt <syntax> (46)
        on left: 34 35 36 37 38 39 40 41
        on right: 32 37 38 39
    DefList <syntax> (47)
        on left: 42 43
        on right: 14 30 42
    Def <syntax> (48)
        on left: 44 45
        on right: 42
    DecList <syntax> (49)
        on left: 46 47 48
        on right: 44 47
    Dec <syntax> (50)
        on left: 49 50 51
        on right: 46 47
    Exp <syntax> (51)
        on left: 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71
        on right: 34 36 37 38 39 41 50 52 53 54 55 56 57 58 59 60 61 62 65 66 70 72 73
    Args <syntax> (52)
        on left: 72 73
        on right: 63 72


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    4 ExtDefList: error . RC

    RC  shift, and go to state 9


State 2

   12 Specifier: TYPE .

    $default  reduce using rule 12 (Specifier)


State 3

   14 StructSpecifier: STRUCT . OptTag LC DefList RC
   15                | STRUCT . Tag
   16                | STRUCT . error RC

    error  shift, and go to state 10
    ID     shift, and go to state 11

    LC  reduce using rule 18 (OptTag)

    OptTag  go to state 12
    Tag     go to state 13


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 14


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 15
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    5 ExtDef: Specifier . ExtDecList SEMI
    6       | Specifier . SEMI
    7       | Specifier . FunDec SEMI
    8       | Specifier . FunDec CompSt
    9       | Specifier . error RC

    error  shift, and go to state 16
    SEMI   shift, and go to state 17
    ID     shift, and go to state 18

    ExtDecList  go to state 19
    VarDec      go to state 20
    FunDec      go to state 21


State 8

   13 Specifier: StructSpecifier .

    $default  reduce using rule 13 (Specifier)


State 9

    4 ExtDefList: error RC .

    $default  reduce using rule 4 (ExtDefList)


State 10

   16 StructSpecifier: STRUCT error . RC

    RC  shift, and go to state 22


State 11

   17 OptTag: ID .
   19 Tag: ID .

    LC        reduce using rule 17 (OptTag)
    $default  reduce using rule 19 (Tag)


State 12

   14 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 23


State 13

   15 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 15 (StructSpecifier)


State 14

    0 $accept: Program $end .

    $default  accept


State 15

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 16

    9 ExtDef: Specifier error . RC
   22 VarDec: error . RB
   25 FunDec: error . RP

    RP  shift, and go to state 24
    RB  shift, and go to state 25
    RC  shift, and go to state 26


State 17

    6 ExtDef: Specifier SEMI .

    $default  reduce using rule 6 (ExtDef)


State 18

   20 VarDec: ID .
   23 FunDec: ID . LP VarList RP
   24       | ID . LP RP

    LP  shift, and go to state 27

    $default  reduce using rule 20 (VarDec)


State 19

    5 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 28


State 20

   10 ExtDecList: VarDec .
   11           | VarDec . COMMA ExtDecList
   21 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 29
    LB     shift, and go to state 30

    $default  reduce using rule 10 (ExtDecList)


State 21

    7 ExtDef: Specifier FunDec . SEMI
    8       | Specifier FunDec . CompSt

    error  shift, and go to state 31
    SEMI   shift, and go to state 32
    LC     shift, and go to state 33

    CompSt  go to state 34


State 22

   16 StructSpecifier: STRUCT error RC .

    $default  reduce using rule 16 (StructSpecifier)


State 23

   14 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 43 (DefList)

    Specifier        go to state 35
    StructSpecifier  go to state 8
    DefList          go to state 36
    Def              go to state 37


State 24

   25 FunDec: error RP .

    $default  reduce using rule 25 (FunDec)


State 25

   22 VarDec: error RB .

    $default  reduce using rule 22 (VarDec)


State 26

    9 ExtDef: Specifier error RC .

    $default  reduce using rule 9 (ExtDef)


State 27

   23 FunDec: ID LP . VarList RP
   24       | ID LP . RP

    error   shift, and go to state 38
    TYPE    shift, and go to state 2
    RP      shift, and go to state 39
    STRUCT  shift, and go to state 3

    Specifier        go to state 40
    StructSpecifier  go to state 8
    VarList          go to state 41
    ParamDec         go to state 42


State 28

    5 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 5 (ExtDef)


State 29

   11 ExtDecList: VarDec COMMA . ExtDecList

    error  shift, and go to state 43
    ID     shift, and go to state 44

    ExtDecList  go to state 45
    VarDec      go to state 20


State 30

   21 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 46


State 31

   31 CompSt: error . LC

    LC  shift, and go to state 47


State 32

    7 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 7 (ExtDef)


State 33

   30 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 43 (DefList)

    Specifier        go to state 35
    StructSpecifier  go to state 8
    DefList          go to state 48
    Def              go to state 37


State 34

    8 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 8 (ExtDef)


State 35

   44 Def: Specifier . DecList SEMI
   45    | Specifier . error SEMI

    error  shift, and go to state 49
    ID     shift, and go to state 44

    VarDec   go to state 50
    DecList  go to state 51
    Dec      go to state 52


State 36

   14 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 53


State 37

   42 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 43 (DefList)

    Specifier        go to state 35
    StructSpecifier  go to state 8
    DefList          go to state 54
    Def              go to state 37


State 38

   28 VarList: error . COMMA

    COMMA  shift, and go to state 55


State 39

   24 FunDec: ID LP RP .

    $default  reduce using rule 24 (FunDec)


State 40

   29 ParamDec: Specifier . VarDec

    error  shift, and go to state 43
    ID     shift, and go to state 44

    VarDec  go to state 56


State 41

   23 FunDec: ID LP VarList . RP

    RP  shift, and go to state 57


State 42

   26 VarList: ParamDec . COMMA VarList
   27        | ParamDec .

    COMMA  shift, and go to state 58

    $default  reduce using rule 27 (VarList)


State 43

   22 VarDec: error . RB

    RB  shift, and go to state 25


State 44

   20 VarDec: ID .

    $default  reduce using rule 20 (VarDec)


State 45

   11 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 11 (ExtDecList)


State 46

   21 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 59


State 47

   31 CompSt: error LC .

    $default  reduce using rule 31 (CompSt)


State 48

   30 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 60
    MINUS   shift, and go to state 61
    NOT     shift, and go to state 62
    LP      shift, and go to state 63
    LC      shift, and go to state 33
    RETURN  shift, and go to state 64
    IF      shift, and go to state 65
    WHILE   shift, and go to state 66
    ID      shift, and go to state 67
    FLOAT   shift, and go to state 68
    INT     shift, and go to state 69

    RC  reduce using rule 33 (StmtList)

    CompSt    go to state 70
    StmtList  go to state 71
    Stmt      go to state 72
    Exp       go to state 73


State 49

   22 VarDec: error . RB
   45 Def: Specifier error . SEMI
   48 DecList: error . COMMA
   51 Dec: error . RP

    SEMI   shift, and go to state 74
    COMMA  shift, and go to state 75
    RP     shift, and go to state 76
    RB     shift, and go to state 25


State 50

   21 VarDec: VarDec . LB INT RB
   49 Dec: VarDec .
   50    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 77
    LB        shift, and go to state 30

    $default  reduce using rule 49 (Dec)


State 51

   44 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 78


State 52

   46 DecList: Dec .
   47        | Dec . COMMA DecList

    COMMA  shift, and go to state 79

    $default  reduce using rule 46 (DecList)


State 53

   14 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 14 (StructSpecifier)


State 54

   42 DefList: Def DefList .

    $default  reduce using rule 42 (DefList)


State 55

   28 VarList: error COMMA .

    $default  reduce using rule 28 (VarList)


State 56

   21 VarDec: VarDec . LB INT RB
   29 ParamDec: Specifier VarDec .

    LB  shift, and go to state 30

    $default  reduce using rule 29 (ParamDec)


State 57

   23 FunDec: ID LP VarList RP .

    $default  reduce using rule 23 (FunDec)


State 58

   26 VarList: ParamDec COMMA . VarList

    error   shift, and go to state 38
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 40
    StructSpecifier  go to state 8
    VarList          go to state 80
    ParamDec         go to state 42


State 59

   21 VarDec: VarDec LB INT RB .

    $default  reduce using rule 21 (VarDec)


State 60

   31 CompSt: error . LC
   40 Stmt: error . SEMI
   71 Exp: error . RP

    SEMI  shift, and go to state 81
    RP    shift, and go to state 82
    LC    shift, and go to state 47


State 61

   61 Exp: MINUS . Exp

    error  shift, and go to state 83
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63
    ID     shift, and go to state 67
    FLOAT  shift, and go to state 68
    INT    shift, and go to state 69

    Exp  go to state 84


State 62

   62 Exp: NOT . Exp

    error  shift, and go to state 83
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63
    ID     shift, and go to state 67
    FLOAT  shift, and go to state 68
    INT    shift, and go to state 69

    Exp  go to state 85


State 63

   60 Exp: LP . Exp RP

    error  shift, and go to state 83
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63
    ID     shift, and go to state 67
    FLOAT  shift, and go to state 68
    INT    shift, and go to state 69

    Exp  go to state 86


State 64

   36 Stmt: RETURN . Exp SEMI

    error  shift, and go to state 83
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63
    ID     shift, and go to state 67
    FLOAT  shift, and go to state 68
    INT    shift, and go to state 69

    Exp  go to state 87


State 65

   37 Stmt: IF . LP Exp RP Stmt
   38     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 88


State 66

   39 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 89


State 67

   63 Exp: ID . LP Args RP
   64    | ID . LP RP
   67    | ID .

    LP  shift, and go to state 90

    $default  reduce using rule 67 (Exp)


State 68

   69 Exp: FLOAT .

    $default  reduce using rule 69 (Exp)


State 69

   68 Exp: INT .

    $default  reduce using rule 68 (Exp)


State 70

   35 Stmt: CompSt .

    $default  reduce using rule 35 (Stmt)


State 71

   30 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 91


State 72

   32 StmtList: Stmt . StmtList

    error   shift, and go to state 60
    MINUS   shift, and go to state 61
    NOT     shift, and go to state 62
    LP      shift, and go to state 63
    LC      shift, and go to state 33
    RETURN  shift, and go to state 64
    IF      shift, and go to state 65
    WHILE   shift, and go to state 66
    ID      shift, and go to state 67
    FLOAT   shift, and go to state 68
    INT     shift, and go to state 69

    RC  reduce using rule 33 (StmtList)

    CompSt    go to state 70
    StmtList  go to state 92
    Stmt      go to state 72
    Exp       go to state 73


State 73

   34 Stmt: Exp . SEMI
   41     | Exp . error SEMI
   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . AND Exp
   54    | Exp . OR Exp
   55    | Exp . RELOP Exp
   56    | Exp . PLUS Exp
   57    | Exp . MINUS Exp
   58    | Exp . STAR Exp
   59    | Exp . DIV Exp
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID
   70    | Exp . LB error RB

    error     shift, and go to state 93
    SEMI      shift, and go to state 94
    ASSIGNOP  shift, and go to state 95
    RELOP     shift, and go to state 96
    PLUS      shift, and go to state 97
    MINUS     shift, and go to state 98
    STAR      shift, and go to state 99
    DIV       shift, and go to state 100
    AND       shift, and go to state 101
    OR        shift, and go to state 102
    DOT       shift, and go to state 103
    LB        shift, and go to state 104


State 74

   45 Def: Specifier error SEMI .

    $default  reduce using rule 45 (Def)


State 75

   48 DecList: error COMMA .

    $default  reduce using rule 48 (DecList)


State 76

   51 Dec: error RP .

    $default  reduce using rule 51 (Dec)


State 77

   50 Dec: VarDec ASSIGNOP . Exp

    error  shift, and go to state 83
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63
    ID     shift, and go to state 67
    FLOAT  shift, and go to state 68
    INT    shift, and go to state 69

    Exp  go to state 105


State 78

   44 Def: Specifier DecList SEMI .

    $default  reduce using rule 44 (Def)


State 79

   47 DecList: Dec COMMA . DecList

    error  shift, and go to state 106
    ID     shift, and go to state 44

    VarDec   go to state 50
    DecList  go to state 107
    Dec      go to state 52


State 80

   26 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 26 (VarList)


State 81

   40 Stmt: error SEMI .

    $default  reduce using rule 40 (Stmt)


State 82

   71 Exp: error RP .

    $default  reduce using rule 71 (Exp)


State 83

   71 Exp: error . RP

    RP  shift, and go to state 82


State 84

   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . AND Exp
   54    | Exp . OR Exp
   55    | Exp . RELOP Exp
   56    | Exp . PLUS Exp
   57    | Exp . MINUS Exp
   58    | Exp . STAR Exp
   59    | Exp . DIV Exp
   61    | MINUS Exp .
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID
   70    | Exp . LB error RB

    DOT  shift, and go to state 103
    LB   shift, and go to state 104

    $default  reduce using rule 61 (Exp)


State 85

   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . AND Exp
   54    | Exp . OR Exp
   55    | Exp . RELOP Exp
   56    | Exp . PLUS Exp
   57    | Exp . MINUS Exp
   58    | Exp . STAR Exp
   59    | Exp . DIV Exp
   62    | NOT Exp .
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID
   70    | Exp . LB error RB

    DOT  shift, and go to state 103
    LB   shift, and go to state 104

    $default  reduce using rule 62 (Exp)


State 86

   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . AND Exp
   54    | Exp . OR Exp
   55    | Exp . RELOP Exp
   56    | Exp . PLUS Exp
   57    | Exp . MINUS Exp
   58    | Exp . STAR Exp
   59    | Exp . DIV Exp
   60    | LP Exp . RP
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID
   70    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 95
    RELOP     shift, and go to state 96
    PLUS      shift, and go to state 97
    MINUS     shift, and go to state 98
    STAR      shift, and go to state 99
    DIV       shift, and go to state 100
    AND       shift, and go to state 101
    OR        shift, and go to state 102
    DOT       shift, and go to state 103
    RP        shift, and go to state 108
    LB        shift, and go to state 104


State 87

   36 Stmt: RETURN Exp . SEMI
   52 Exp: Exp . ASSIGNOP Exp
   53    | Exp . AND Exp
   54    | Exp . OR Exp
   55    | Exp . RELOP Exp
   56    | Exp . PLUS Exp
   57    | Exp . MINUS Exp
   58    | Exp . STAR Exp
   59    | Exp . DIV Exp
   65    | Exp . LB Exp RB
   66    | Exp . DOT ID
   70    | Exp . LB error RB

    SEMI      shift, and go to state 109
    ASSIGNOP  shift, and go to state 95
    RELOP     shift, and go to state 96
    PLUS      shift, and go to state 97
    MINUS     shift, and go to state 98
    STAR      shift, and go to state 99
    DIV       shift, and go to state 100
    AND       shift, and go to state 101
    OR        shift, and go to state 102
    DOT       shift, and go to state 103
    LB        shift, and go to state 104


State 88

   37 Stmt: IF LP . Exp RP Stmt
   38     | IF LP . Exp RP Stmt ELSE Stmt

    error  shift, and go to state 83
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63
    ID     shift, and go to state 67
    FLOAT  shift, and go to state 68
    INT    shift, and go to state 69

    Exp  go to state 110


State 89

   39 Stmt: WHILE LP . Exp RP Stmt

    error  shift, and go to state 83
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63
    ID     shift, and go to state 67
    FLOAT  shift, and go to state 68
    INT    shift, and go to state 69

    Exp  go to state 111


State 90

   63 Exp: ID LP . Args RP
   64    | ID LP . RP

    error  shift, and go to state 83
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63
    RP     shift, and go to state 112
    ID     shift, and go to state 67
    FLOAT  shift, and go to state 68
    INT    shift, and go to state 69

    Exp   go to state 113
    Args  go to state 114


State 91

   30 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 30 (CompSt)


State 92

   32 StmtList: Stmt StmtList .

    $default  reduce using rule 32 (StmtList)


State 93

   41 Stmt: Exp error . SEMI

    SEMI  shift, and go to state 115


State 94

   34 Stmt: Exp SEMI .

    $default  reduce using rule 34 (Stmt)


State 95

   52 Exp: Exp ASSIGNOP . Exp

    error  shift, and go to state 83
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63
    ID     shift, and go to state 67
    FLOAT  shift, and go to state 68
    INT    shift, and go to state 69

    Exp  go to state 116


State 96

   55 Exp: Exp RELOP . Exp
